lab1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-python-service
spec:
  selector:
    app: hello-python
  ports:
    - protocol: "TCP"
      port: 6000
      targetPort: 5001
#  type: LoadBalancer #NodePort #попробовать тут LoadBalancer
