lab1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab1-ingress
spec:
  defaultBackend:
    service:
      name: hello-python-service
      port:
        number: 8000
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-python-service
                port:
                  number: 8000
  ingressClassName: nginx
